tests/cases/control-flow/errors/range-type-non-integer.ari
fn main() -> i64 {
  let unsupported: Range[bool] = range(false, true);
  return 0;
}
